force-app/main/default/objects/HRCSVC_Kit_Information__c/HRCSVC_Kit_Information__c.object-meta.xml
<CustomObject>
    <label>Kit Information</label>
    <nameField>
        <label>Kit Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kit Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>