force-app/main/default/objects/HRCSVC_Kit_Information__c/fields/HRCSVC_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cost_Center__c</fullName>
    <label>Cost Center</label>
    <type>TextArea</type>
</CustomField>