force-app/main/default/objects/HRCSVC_Kit_Information__c/fields/HRCSVC_Kit_Child__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Kit_Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit Child</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Kit Information (Kit Child)</relationshipLabel>
    <relationshipName>Kit_Information1</relationshipName>
    <type>Lookup</type>
</CustomField>