force-app/main/default/objects/HRCSVC_Kit_Information__c/fields/HRCSVC_Kit_Parent__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Kit_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kit Parent</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Kit Information (Kit Parent)</relationshipLabel>
    <relationshipName>Kit_Information</relationshipName>
    <type>Lookup</type>
</CustomField>