force-app/main/default/objects/HRCSVC_Kit_Information__c/fields/HRCSVC_Sequence__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>